welcome.lessons.welcome.array.array667.Array667.scala.error
array667:8: error: type mismatch;
 found   : Boolean
 required: Int
      if(nums(i+1==7)){
                 ^