welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var occ=0
  var double=0
  var sept=0
	for(i<-0 to nums.length-1){
    if (nums(i)==6){
      occ=occ+1
      if(nums(i+1==7)){
        sept=sept+1
      }
    }
  }
  if(occ%2==0){
    double=double+1
  }
	return double
}